examples/test/testpolicy14566.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14566
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key16: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value2
          key34: value12
      podSelector:
        matchLabels:
          key28: value36
          key44: value22
          key5: value42
